--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -89,4 +89,5 @@ encoding//src/com/android/test/view/book/XWBook.java=UTF-8
 encoding//src/com/android/test/view/book/XXBook.java=UTF-8
 encoding//src/com/android/test/view/book/XZBook.java=UTF-8
 encoding//src/com/android/test/view/book/ZLBook.java=UTF-8
+encoding//src/main/java=UTF-8
 encoding/AndroidManifest.xml=UTF-8
