--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,20 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.10</version>
 		</dependency>
+		<dependency>
+			<groupId>com.baidu</groupId>
+			<artifactId>map</artifactId>
+			<version>1.1.1</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/libs/baidumapapi_v2_4_1.jar</systemPath>
+		</dependency>
+		<dependency>
+			<groupId>com.baidu</groupId>
+			<artifactId>loc</artifactId>
+			<version>1.1.1</version>
+			<scope>system</scope>
+			<systemPath>${basedir}/libs/locSDK_5.01.jar</systemPath>
+		</dependency>
 	</dependencies>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
