--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.lianquna</groupId>
 	<artifactId>acc-android</artifactId>
-	<version>1.1.2</version>
+	<version>1.1.3</version>
 	<name>acc-android</name>
-	<description>ACC Java develop platform.</description>
+	<description>ACC android develop platform.</description>
 	<organization>
 		<name>acc-android</name>
 		<url>http://lianquna.com/</url>
